--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,30 +1,46 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<div align="center">
-    <div>
-        <a href="/logout">Logout</a>
-    </div>
-    <table border="1" cellpadding="5">
-        <caption><h2>User Information</h2></caption>
-        <tr>
-            <th>Username: </th>
-            <td th:text="${user.username}"></td>
-        </tr>
-        <tr>
-            <th>Role: </th>
-            <td>
-                <div th:each="role : ${user.roles}">
-                    <div th:text="${role.name}"></div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <th>Password: </th>
-            <td>Hidden</td>
-        </tr>
-    </table>
-</div>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link href="../static/css/adminPanel.css" th:href="@{/css/adminPanel.css}" rel="stylesheet" />
+
+    <title>User page</title>
+</head>
+<body>
+<nav class="navbar navbar-dark bg-dark">
+    <h4><a href="#">Project name</a></h4>
+    <a href="/logout">Logout</a>
+</nav>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="col-md-2 mt-5 d-md-block sidebar">
+            <div class="sidebar-sticky">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link list-group-item" th:href="@{'/admin'}">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link list-group-item active" th:href="@{'/hello'}">User</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 bg-light">
+            <h2 class="mt-5">User page</h2>
+            <p>Hello, <span th:text="${user.username}"></span></p>
+        </main>
+    </div>
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
